# CADMesh

./: .gitignore  .gitmodules  CADMesh.cc  CADMesh.hh  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  README.mediawiki  cadmesh-config.cmake.in  cadmesh.gmk  cadmesh.gmk.in  cadmesh.pro  configure  configure.ac
cmake/: cadmesh-config.cmake.in  generateSingleHeader.py
examples/: README.md
examples/basic/: CMakeLists.txt  GNUmakefile  basic.cc  cadmesh_example.cc
examples/basic/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
examples/basic/macros/: vis.mac
examples/basic/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
examples/multiple/: CMakeLists.txt  multiple.cc
examples/nested_polygon_mesh/: BodyHasHeart.smesh  CMakeLists.txt  cadmesh-nested-polygon-mesh.cc
examples/nested_polygon_mesh/include/: DetectorConstruction.hh  PhysicsList.hh
examples/nested_polygon_mesh/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
examples/polygon_mesh/: CMakeLists.txt
examples/polygon_mesh/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh
examples/polygon_mesh/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
examples/template/: CMakeLists.txt  README.md  cadmesh_template.cc
examples/template/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
examples/template/macros/: vis.mac
examples/template/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
examples/tetrahedra/: CMakeLists.txt  tetrahedra.cc
examples/tetrahedral_mesh/: BodyHasHeart.ele  BodyHasHeart.node  CMakeLists.txt  cadmesh-tetrahedral-mesh.cc  visual_run.mac
examples/tetrahedral_mesh/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh
examples/tetrahedral_mesh/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
include/: ASSIMPReader.hh  BuiltInReader.hh  CADMesh.hh  CADMeshTemplate.hh  Configuration.hh.in  Exceptions.hh  FileTypes.hh  Lexer.hh  LexerMacros.hh  Mesh.hh  OBJReader.hh  PLYReader.hh  Reader.hh  STLReader.hh  TessellatedMesh.hh  TetrahedralMesh.hh  cadmesh.hh  cadmeshHelpers.hh  cadmeshLog.hh  cadmeshPolygonMesh.hh  cadmeshRegionAttributes.hh  cadmeshTetrahedralMesh.hh  cadmeshTetrahedralMesh.icc
meshes/: box_solidworks.ply  box_solidworks.stl  bunny.stl  cone.dae  sphereWithMissingFace.ply
models/: cone.dae  cone.ply  cone.stl
src/: ASSIMPReader.cc  BuiltInReader.cc  CADMesh.cc  CADMeshTemplate.cc  CADMeshTemplate.impl.cc  Exceptions.cc  Exeptions.cc  FileTypes.cc  Lexer.cc  Mesh.cc  OBJReader.cc  PLYReader.cc  Reader.cc  STLReader.cc  TessellatedMesh.cc  TetrahedralMesh.cc  cadmeshHelpers.cc  cadmeshLog.cc  cadmeshPolygonMesh.cc  cadmeshTetrahedralMesh.cc
tests/: CADMeshTests.cc  InvalidTessellatedMeshTests.cc  README.md  Simulator.hh  ValidTessellatedMeshTests.cc
